src/tests/keep_parsing_3.include2.qdi

word f2(word a)
	return a + '0'; // error
end
